<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sensor_integration</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="gabearod2@gmail.com">gabriel</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>python3</depend>

  <exec_depend>DFRobot_MultiGasSensor</exec_depend>
  <exec_depend>mysql.connector</exec_depend>
  <exec_depend>python3-sys</exec_depend>
  <exec_depend>python3-os</exec_depend>
  <exec_depend>python3-time</exec_depend>
  <exec_depend>adafruit-blinka</exec_depend>
  <exec_depend>adafruit-circuitpython-scd4x</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
